# sink

./: .gitignore  CMakeLists.txt  Cargo.toml  TODO.org
src/: CMakeLists.txt  lib.rs  lib_test.rs  sink.cpp  sink.hpp
tests/: CMakeLists.txt  main.cpp
